--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -54,3 +54,45 @@
   year={2005},
   publisher={SIAM}
 }
+
+@book{aggarwal1987mhm,
+  title={{A model for hierarchical memory}},
+  author={Aggarwal, A. and Alpern, B. and Chandra, A. and Snir, M.},
+  year={1987},
+  publisher={ACM Press New York, NY, USA}
+}
+
+@article{morrison1968ppa,
+  title={{PATRICIA -- Practical Algorithm To Retrieve Information Coded in Alphanumeric}},
+  author={Morrison, D.R.},
+  journal={Journal of the ACM (JACM)},
+  volume={15},
+  number={4},
+  pages={514--534},
+  year={1968},
+  publisher={ACM Press New York, NY, USA}
+}
+
+@article{sleator1985sab,
+  title={{Self-adjusting binary search trees}},
+  author={Sleator, D.D. and Tarjan, R.E.},
+  journal={J. Assoc. Comput. Mach},
+  volume={32},
+  number={3},
+  pages={652686},
+  year={1985}
+}
+
+@misc{oprofile,
+  title={{OProfile}},
+  author={Levon, J. and Elie, P.},
+  note={http://oprofile.sourceforge.net},
+}
+
+@article{rahman2001opd,
+  title={{Optimised Predecessor Data Structures for Internal Memory}},
+  author={Rahman, N. and Cole, R. and Raman, R.},
+  journal={Algorithm Engineering: 5th International Workshop, WAE 2001, Aarhus, Denmark, August 28-31, 2001: Proceedings},
+  year={2001},
+  publisher={Springer}
+}
