Moved text "Research Proposal" to subtitle.

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -11,7 +11,8 @@
 
 \begin{document}
 
-\title{Evaluation of Cache-Oblivious Data Structures\\Draft research proposal}
+\title{Evaluation of Cache-Oblivious Data Structures}
+\subtitle{Research Proposal (draft)}
 
 \numberofauthors{1}
 \author{Maks Verver\\ \email{m.verver@student.utwente.nl}}
