Renamed set implementation directory from "btree" to "sets". Fixed a bug in B-tree implementation.

--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -86,7 +86,7 @@
 @misc{oprofile,
   title={{OProfile}},
   author={Levon, J. and Elie, P.},
-  note={http://oprofile.sourceforge.net},
+  note={\verb#http://oprofile.sourceforge.net#},
 }
 
 @article{rahman2001opd,
